add gsap css animation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Hi! It's a Spline 3D Portfolio.</h1>
         <p>Welcome to the 3D Spline workshop. You will be able to add 3D animations in your website.</p><br>
         <h3>Modelise :</h3>
-        <p>Add a scene, modelize objects, add lights, add camera.</p>
+        <p>Add a scene, modelise objects, add lights, add camera.</p>
         <h3>Animate :</h3>
         <p>Add states, add events</p>
         <h3>Import in your website :</h3>
@@ -34,6 +34,9 @@
         </ul> -->
         <p class="credits">This worskshop is created and animated by Duc Luu & Miguel Palacios</p>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
